--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>  
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-      <title>MU Material : Home</title>
+      <title>Tristan Coutts</title>
 
        <!-- CSS  -->      
       <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
@@ -96,7 +96,7 @@
                       <div class="col s12 m8 l9">
                         <div class="about-inner-right">
                           <h3>About Me</h3>
-                          <p>I am aspiring web developer.
+                          <p>
                             I have just completed a coding bootcamp at CoGrammar-Lifechoices.
                             Where i learnt coding and have received leadership training
                           </p>
@@ -194,9 +194,13 @@
                         <div class="card-reveal">
                           <span class="card-title reveal-title">The River Club<i class="material-icons right">close</i></span>
                           <a href="#" class="card-subtitle">The River Club</a>
-                          <p>I was still in highschool at this point and 
-                            so i started working part-time a an events waiter.
-                          </p>
+                          <h1>skills acquired</h1>
+                          <ul>
+                            <li>How to do event set-up</li>
+                            <li>how to work in a team</li>
+                            <li>how to give good service</li>
+                            <li>how to address client concerns</li>
+                          </ul>
                         </div>
                       </div>
                     </div>
@@ -212,15 +216,16 @@
                         </div>
                         <div class="card-content">
                           <span class="card-title activator reveal-title">Banqueting waiter<i class="material-icons right">more_vert</i></span>
-                          <p><a href="#">Windows Phone</a></p>
+                          <p><a href="#">Grandwest</a></p>
                         </div>
                         <div class="card-reveal">
                           <span class="card-title reveal-title">Banqueting waiter<i class="material-icons right">close</i></span>
-                          <a href="#" class="card-subtitle">Windows Phone</a>
-                          <p>I worked part time as a waiter 
-                            at grandwest in there banquting department.
-                            It mostly consisted of doing set up for events.
-                          </p>
+                          <a href="#" class="card-subtitle">Grandwest</a>
+                          <h1>skills acquired</h1>
+                          <ul>
+                            <li></li>
+                            <li></li>
+                          </ul>
                         </div>
                       </div>
                     </div>
@@ -233,11 +238,11 @@
                         </div>
                         <div class="card-content">
                           <span class="card-title activator reveal-title">Waiter<i class="material-icons right">more_vert</i></span>
-                          <p><a href="#">Windows Phone</a></p>
+                          <p><a href="#">Southern Sun Waterfront hotel</a></p>
                         </div>
                         <div class="card-reveal">
                           <span class="card-title reveal-title">waiter<i class="material-icons right">close</i></span>
-                          <a href="#" class="card-subtitle">waiter</a>
+                          <a href="#" class="card-subtitle">Southern Sun Waterfront hotel</a>
                           <p>I was a waiter at a hotel bar during ths period</p>
                         </div>
                       </div>
@@ -251,7 +256,7 @@
                         </div>
                         <div class="card-content">
                           <span class="card-title activator reveal-title">Waiter<i class="material-icons right">more_vert</i></span>
-                          <p><a href="#">Waiter</a></p>
+                          <p><a href="#">The Twelve Apostles</a></p>
                         </div>
                         <div class="card-reveal">
                           <span class="card-title reveal-title">Waiter<i class="material-icons right">close</i></span>
